--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev ./src/main.ts",
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.9.2",
     "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
@@ -20,7 +21,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@trpc/server": "^10.44.1",
     "@types/express": "^4.17.21",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "zod": "^3.22.4"
   }
 }
